--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ ul {
   flex-wrap: wrap;
 }
 li {
-  padding: 20px 60px;
+  padding: 20px;
   margin: 12px auto;
   list-style-type: none !important;
   border: solid 1px #ccc;
@@ -28,13 +28,13 @@ li h3 {
   color: #979797;
 }
 h5 ul li a {
-  width: 400px;
+  text-align: center;
 }
 h5 ul li {
   background-color: transparent;
   border: none;
-  text-align: left;
-  width: 60%;
+  text-align: center;
+  margin-left: -40px;
 }
 li .more {
   text-align: center;
@@ -63,27 +63,36 @@ li .more:hover {
 .details .content p {
   width: 70% !important;
 }
-/*navifgation*/
+
+/*navigation*/
 nav {
   margin: 0;
   padding: 0;
-  height: 50px;
+  height: 60px;
+  position: fixed;
+  background-color: #333;
+  display: flex !important;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
   position: fixed;
 }
 nav .menu {
-  width: 100%;
-  position: fixed;
-  background-color: #333;
-  height: 50px;
+  width: 60%;
   margin: 0;
 }
 nav ul li {
   border: none;
   padding: 0;
+  width: 120px;
+  text-align: center;
+  margin: auto;
 }
 nav ul li a {
   color: #fff;
   text-align: center;
+  width: 120px;
+  margin: auto;
 }
 nav ul li a:hover {
   color: #ff0;
